--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,20 @@
+on:
+  push:
+    branches:
+      - master
 
+
+
+
+
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 'testing Github action'
+        run: pwd
+
+      - name: 'test printing'
+        run: echo Nada
