--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,5 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 'testing Github action'
-        run: pwd
-
-      - name: 'test printing'
-        run: echo Nada
+      - name: 'printing folder content'
+        run: ls
