--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 'printing folder content'
+      - name: 'before adding'
         run: ls
+
+      -  uses: actions/checkout@v3
+
+      - name: 'after adding'
+        run: ls  
