--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 'before adding'
-        run: ls
-
       -  uses: actions/checkout@v3
 
-      - name: 'after adding'
-        run: ls  
+
+      - name: 'login'
+        run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
+
+
+
+       
