--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,16 @@ jobs:
       -  uses: actions/checkout@v3
 
 
-      - name: 'login'
-        run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
+      -  name: 'login'
+         run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
+
+
+      -  name: 'building docker image '
+         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/myimage .
+
+
+      -  name: 'pushing to docker hub'
+         run: docker push ${{ secrets.DOCKER_USERNAME }}/myimage    
 
 
 
